Added basic sceleton and change colors

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<html lang="de">
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#2b998a"/>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+            name="description"
+            content="Webseite, die die Auslastung von Kletterhallen anzeigt."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,11 +24,43 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Utilization</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
 
-  </body>
+    <style>
+        .moving-heading {
+            text-align: center;
+            position: fixed;
+            top: 0;
+            left: 0;
+            transform: translateX(50%);
+            animation: move forwards 4s;
+        }
+
+        @keyframes move {
+            0% {
+                top: 0;
+            }
+            50% {
+                top: 0;
+                transform: translate(50%, 0) rotate3d(1, 1, 1, 0);
+            }
+            100% {
+                top: 100%;
+                transform: translate(50%, -200%) rotate3d(1, 1, 1, 45deg);
+            }
+        }
+    </style>
+
+    <title>React Utilization</title>
+</head>
+<body>
+<noscript>
+    <style>
+        #root {
+            display: none;
+        }
+    </style>
+    <h1 class="moving-heading">You need to enable JavaScript to run this app.</h1>
+</noscript>
+<div id="root"></div>
+</body>
 </html>
