All things working except a toast message

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+          rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#2b998a"/>
@@ -52,7 +53,7 @@
         }
     </style>
 
-    <title>React BarGraph</title>
+    <title>Kletter monitor</title>
 </head>
 <body>
 <noscript>
